<resources>
    <string name="app_name">RickAndMortyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- List Types -->
    <string name="grid_list_type">Grid Liste</string>
    <string name="linear_list_type">Düz Liste</string>


    <!-- Page Titles -->
    <string name="character_list_page_title">Characters</string>
    <string name="character_detail_page_title">Character Detail</string>

    <!-- Info Titles-->
    <string name="gender_info_title">Gender</string>
    <string name="last_location_info_title">Last Location</string>
    <string name="status_info_title">Status</string>
    <string name="number_of_episode_info_title">Episode Number</string>
    <string name="last_episode_name_info_title">Episode Name</string>
    <string name="last_epside_air_date_info_title">Air Date</string>
    <string name="origin_location_info_title">Origin Location</string>

    <!-- Titles -->
    <string name="last_episode_title">Last Episode</string>
    <string name="locations_title">Locations</string>

    <!-- InfoView -->
    <string name="info_view_default_title">Info Title</string>
    <string name="info_view_default_text">Info Text</string>

    <!-- Status Filter -->
    <string name="dead_status_filter_text">Dead</string>
    <string name="alive_status_filter_text">Alive</string>
    <string name="unknown_status_filter">unknown</string>
</resources>